# cascade-llm

./: .gitignore  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
src/: audio.rs  cascade_features.rs  config.rs  db.rs  handlers.rs  language.rs  main.rs  media.rs  state.rs  types.rs
src/providers/: mod.rs
src/web/: dashboard.html  settings.html
tests/: fallback.rs  integration.rs  lib.rs  metrics.rs  quality.rs
