[package]
name = "cascade-llm"
version = "0.1.0"
edition = "2021"
description = "High-performance self-hosted LLM router with complexity scoring, tool-aware routing, and vision pipeline"
license = "MIT"
repository = "https://github.com/cascade-llm/cascade-llm"

[[bin]]
name = "cascade-llm"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lingua = "1.6"