[package]
name = "cascade-llm"
version = "0.2.0"
edition = "2021"
description = "Unified AI gateway with multi-provider routing, web UI, TTS/STT, and media generation"
license = "MIT"
repository = "https://github.com/cascade-llm/cascade-llm"

[[bin]]
name = "cascade-llm"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lingua = "1.6"
regex = "1"
lru = "0.12"
moka = { version = "0.12", features = ["future"] }
base64 = "0.22"
tokio-util = { version = "0.7", features = ["codec"] }
prometheus = "0.13"
http-body-util = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
